# spotipi

./: Cargo.toml  CrossCompile.cmake  LICENSE  README.md  dockerbuild.bat  dockerclean.bat  publish.sh  test.sh  update_version.sh
.devcontainer/: Dockerfile  Dockerfile.alpine  devcontainer.json
.github/workflows/: test.yml
audio/: Cargo.toml
audio/src/: decrypt.rs
audio/src/fetch/: mod.rs  receive.rs
connect/: Cargo.toml
connect/src/: lib.rs  model.rs  spirc.rs  state.rs
connect/src/state/: provider.rs  restrictions.rs
contrib/: Dockerfile  Dockerfile.Rpi  spotipi.service  spotipi.user.service
contrib/cross-compile-armv6hf/: Dockerfile
core/: Cargo.toml
core/src/: authentication.rs  cdn_url.rs  component.rs  config.rs  date.rs  error.rs  file_id.rs  lib.rs  login5.rs  packet.rs  session.rs  spotify_id.rs  token.rs  version.rs
core/src/connection/: mod.rs
core/tests/: connect.rs
discovery/: Cargo.toml
discovery/examples/: discovery.rs  discovery_group.rs
discovery/src/: lib.rs  server.rs
examples/: get_token.rs  play.rs  play_connect.rs  playlist_tracks.rs
metadata/: Cargo.toml
metadata/src/: album.rs  artist.rs  availability.rs  content_rating.rs  copyright.rs  episode.rs  external_id.rs  image.rs  lib.rs  lyrics.rs  request.rs  restriction.rs  sale_period.rs  show.rs  track.rs  util.rs  video.rs
metadata/src/audio/: file.rs  item.rs
metadata/src/playlist/: annotation.rs  attribute.rs  diff.rs  item.rs  list.rs  operation.rs  permission.rs
oauth/: Cargo.toml
oauth/examples/: oauth_async.rs  oauth_sync.rs
oauth/src/: lib.rs
playback/: Cargo.toml
playback/src/: config.rs  lib.rs
playback/src/audio_backend/: gstreamer.rs  jackaudio.rs  portaudio.rs
playback/src/cec/: mod.rs
playback/src/decoder/: mod.rs  passthrough_decoder.rs  symphonia_decoder.rs
playback/src/mixer/: mappings.rs
protocol/: Cargo.toml
src/: lib.rs  main.rs  player_event_handler.rs
