[package]
name = "spotipi"
version = "0.7.0"
rust-version = "1.82"
authors = ["Jon Perkowski","Librespot Org"]
license = "MIT"
description = "An open source client library for Spotify, with support for Spotify Connect, based on Librespot (https://github.com/librespot-org/librespot)"
keywords = ["spotify"]
repository = "https://github.com/JonPerk/spotipi"
readme = "README.md"
edition = "2021"

[workspace]

[lib]
name = "spotipi"
path = "src/lib.rs"

[[bin]]
name = "spotipi"
path = "src/main.rs"
doc = false

[dependencies.spotipi-audio]
path = "audio"
version = "0.7.0"

[dependencies.spotipi-connect]
path = "connect"
version = "0.7.0"

[dependencies.spotipi-core]
path = "core"
version = "0.7.0"

[dependencies.spotipi-discovery]
path = "discovery"
version = "0.7.0"
default-features = false

[dependencies.spotipi-metadata]
path = "metadata"
version = "0.7.0"

[dependencies.spotipi-playback]
path = "playback"
version = "0.7.0"

[dependencies.spotipi-protocol]
path = "protocol"
version = "0.7.0"

[dependencies.spotipi-oauth]
path = "oauth"
version = "0.7.0"

[dependencies]
data-encoding = "2.5"
env_logger =  { version = "0.11.2", default-features = false, features = ["color", "humantime", "auto-color"] }
futures-util = { version = "0.3", default-features = false }
getopts = "0.2"
log = "0.4"
sha1 = "0.10"
sysinfo = { version = "0.33.0", default-features = false, features = ["system"] }
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt", "macros", "signal", "sync", "parking_lot", "process"] }
url = "2.2"

[features]
alsa-backend = ["spotipi-playback/alsa-backend"]
portaudio-backend = ["spotipi-playback/portaudio-backend"]
pulseaudio-backend = ["spotipi-playback/pulseaudio-backend"]
jackaudio-backend = ["spotipi-playback/jackaudio-backend"]
rodio-backend = ["spotipi-playback/rodio-backend"]
rodiojack-backend = ["spotipi-playback/rodiojack-backend"]
sdl-backend = ["spotipi-playback/sdl-backend"]
gstreamer-backend = ["spotipi-playback/gstreamer-backend"]

with-avahi = ["spotipi-discovery/with-avahi"]
with-dns-sd = ["spotipi-discovery/with-dns-sd"]
with-libmdns = ["spotipi-discovery/with-libmdns"]

passthrough-decoder = ["spotipi-playback/passthrough-decoder"]

default = ["rodio-backend", "with-libmdns"]

[package.metadata.deb]
maintainer = "Jon Perkowski"
copyright = "2025 Jon Perkowski"
license-file = ["LICENSE", "4"]
depends = "$auto"
extended-description = """\
SpotiPi is an open source client library for Spotify. It enables applications \
to use Spotify's service, without using the official but closed-source \
libspotify. Additionally, it will provide extra features which are not \
available in the official library."""
section = "sound"
priority = "optional"
assets = [
    ["target/release/spotipi", "usr/bin/", "755"],
    ["contrib/spotipi.service", "lib/systemd/system/", "644"],
    ["contrib/spotipi.user.service", "lib/systemd/user/", "644"]
]

[workspace.package]
rust-version = "1.82"
