[package]
name = "spotipi-metadata"
version = "0.6.0-dev"
rust-version.workspace = true
authors = ["Paul Lietar <paul@lietar.net>"]
description = "The metadata logic for spotipi"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
log = "0.4"
protobuf = "3.5"
thiserror = "2.0"
uuid = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.spotipi-core]
path = "../core"
version = "0.6.0-dev"

[dependencies.spotipi-protocol]
path = "../protocol"
version = "0.6.0-dev"
